# borealis-mcp

./: .gitignore  DESIGN_PLAN.md  README.md  pyproject.toml  start_borealis.sh  start_borealis_daemon.sh
config/: borealis.yaml
config/applications/pepper/: aurora.yaml  default.yaml
config/applications/warpx/: aurora.yaml  default.yaml  sunspot.yaml
config/systems/: README.md  aurora.yaml  polaris.yaml  sunspot.yaml
src/borealis_mcp/: __init__.py  server.py
src/borealis_mcp/applications/: __init__.py  base.py  registry.py
src/borealis_mcp/applications/generic/: __init__.py  templates.py
src/borealis_mcp/applications/hello_world/: __init__.py  templates.py
src/borealis_mcp/applications/pepper/: __init__.py  templates.py
src/borealis_mcp/applications/warpx/: INTEGRATION.md  __init__.py  templates.py
src/borealis_mcp/config/: __init__.py  constants.py  system.py
src/borealis_mcp/core/: __init__.py  discovery.py  mock_pbs_client.py  pbs_client.py  pbs_prompts.py  pbs_resources.py  pbs_tools.py  workspace.py  workspace_files.py  workspace_tools.py
src/borealis_mcp/utils/: __init__.py  errors.py  formatting.py  logging.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_generate_warpx_picmi.py  test_warpx_templates.py  test_warpx_templates_unittest.py
tools/: http_bridge.py  http_bridge.py_kilo  start_borealis_tunnel.sh
